[gd_scene load_steps=4 format=3 uid="uid://c555wkqgwthfb"]

[ext_resource type="Script" path="res://Scripts/Enemies/goblin_archer/arrow.gd" id="1_i0y8q"]
[ext_resource type="PackedScene" uid="uid://cfo31mfhr8bd5" path="res://Scenes/goblin_imports/GobbinArrow.glb" id="3_5wnsm"]

[sub_resource type="BoxShape3D" id="BoxShape3D_6ipvl"]
size = Vector3(0.05, 0.05, 0.7)

[node name="arrow" type="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0.5, -0.5)
collision_layer = 3
gravity_scale = 0.25
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_i0y8q")

[node name="arrow_collision" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_6ipvl")

[node name="GobbinArrow" parent="." instance=ExtResource("3_5wnsm")]
transform = Transform3D(-0.575, 0, 5.02681e-08, 0, 0.575, 0, -5.02681e-08, 0, -0.575, 0, 0, 0)

[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
